--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@tanstack/react-query": "^5.71.3",
     "axios": "^1.8.4",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.6.3",
     "lodash": "^4.17.21",
     "lodash.isequal": "^4.5.0",
